--- a/locales/uk.json
+++ b/locales/uk.json
@@ -134,5 +134,9 @@
     "Order_Help": "Допомога із замовленням",
     "Deliver_1": "Кур'єр 1",
     "Your_Rider": "Ваш кур'єр",
-    "Call": "Зателефонувати"
+    "Call": "Зателефонувати",
+    "guest": "Гість",
+    "enter_name": "Введіть ім'я",
+    "name_placeholder": "Ім'я в профілі",
+    "save": "Зберегти"
   }
