--- a/locales/uk.json
+++ b/locales/uk.json
@@ -164,6 +164,11 @@
   "enter_new_passwords": "Введіть нові паролі",
 
   "wrong_current_password": "Неправильний поточний пароль",
-  "next": "Далі"
+  "next": "Далі",
+  "phone_format_info": "Формат телефону: +38 0XX XXX XXXX",
+
+  "invalid_email_format": "Неправильний формат електронної пошти",
+  "check_your_email_for_verification_link": "Перевірте свою електронну пошту для посилання підтвердження",
+  "email_is_current": "Електронна адреса відповідає поточній"
   
   }
