updated location logic, now it will be save to storage from settings

--- a/locales/uk.json
+++ b/locales/uk.json
@@ -169,6 +169,7 @@
 
   "invalid_email_format": "Неправильний формат електронної пошти",
   "check_your_email_for_verification_link": "Перевірте свою електронну пошту для посилання підтвердження",
-  "email_is_current": "Електронна адреса відповідає поточній"
+  "email_is_current": "Електронна адреса відповідає поточній",
+  "loading_location": "Завантаження розташування..."
   
   }
