--- a/locales/en.json
+++ b/locales/en.json
@@ -135,5 +135,6 @@
 
   "invalid_email_format": "Invalid email format",
   "check_your_email_for_verification_link": "Check your email for the verification link",
-  "email_is_current": "Email is currently in use"
+  "email_is_current": "Email is currently in use",
+  "loading_location": "Loading location..."
 }
