--- a/locales/uk.json
+++ b/locales/uk.json
@@ -170,6 +170,7 @@
   "invalid_email_format": "Неправильний формат електронної пошти",
   "check_your_email_for_verification_link": "Перевірте свою електронну пошту для посилання підтвердження",
   "email_is_current": "Електронна адреса відповідає поточній",
-  "loading_location": "Завантаження розташування..."
+  "loading_location": "Завантаження розташування...",
+  "no_restaurants_found": "Ресторани не знайдені"
   
   }
