updated categories position in the restaurant

--- a/locales/uk.json
+++ b/locales/uk.json
@@ -132,7 +132,7 @@
     "Your_order_at": "Ваше замовлення в",
     "is_being_prepared": "готується",
     "Order_Help": "Допомога із замовленням",
-    "Deliver_1": "Кур'єр 1",
+    "Deliver_1": "Ігор",
     "Your_Rider": "Ваш кур'єр",
     "Call": "Зателефонувати",
     "guest": "Гість",
